--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@ node_modules
 # Specific azuredeploy.parameters.json files for dev testing (ignored not to expose ssh pub keys)
 .params/
 .vs/
+.keys/
+azuredeploy_original.json
+.logs/
